# d

./: .clang-format  .editorconfig  .gitignore  Bakefile.sh  Makefile  README.md  d.c  d.h  main.c  main.h  meson.build  test.c
config/: d.service
include/: meson.build
src/: meson.build  util.c  util.h
test/: expand_string.c  integration.c  test.c
testdata/10-deploy-file/: d.conf
testdata/11-deploy-directory/: d.conf
